--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@tsconfig/create-react-app": "^2.0.2",
+    "@types/react-dom": "^18.2.18",
     "web-vitals": "^3.5.2"
   }
 }
